feat:single input

--- a/index.ipynb
+++ b/index.ipynb
@@ -1067,10 +1067,450 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def load_video(path:str) -> List[float]:\n",
+    "    cap = cv2.VideoCapture(path)\n",
+    "    frames = []\n",
+    "    for _ in range(int(cap.get(cv2.CAP_PROP_FRAME_COUNT))):\n",
+    "        ret, frame = cap.read()\n",
+    "        frame = tf.image.rgb_to_grayscale(frame)\n",
+    "        frames.append(frame[190:236,80:220,:])\n",
+    "    cap.release()\n",
+    "\n",
+    "    mean = tf.math.reduce_mean(frames)\n",
+    "    std = tf.math.reduce_std(tf.cast(frames, tf.float32))\n",
+    "    return tf.cast((frames - mean),tf.float32)/std\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vocab = [x for x in \"abcdefghijklmnopqrstuvwxyz'?!1234567890\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The vocabulary is: ['', 'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z', \"'\", '?', '!', '1', '2', '3', '4', '5', '6', '7', '8', '9', '0'](size=40)\n"
+     ]
+    }
+   ],
+   "source": [
+    "char_to_num = tf.keras.layers.StringLookup(vocabulary=vocab, oov_token=\"\")\n",
+    "num_to_char = tf.keras.layers.StringLookup(\n",
+    "    vocabulary=char_to_num.get_vocabulary(), oov_token=\"\",invert=True\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    f\"The vocabulary is: {char_to_num.get_vocabulary()}\"\n",
+    "    f\"(size={char_to_num.vocabulary_size()})\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_alignments(path:str) -> List[str]:\n",
+    "    with open(path,'r') as f:\n",
+    "        lines = f.readlines()\n",
+    "    tokens = []\n",
+    "    for line in lines:\n",
+    "        line = line.split()\n",
+    "        if line[2] != 'sil':\n",
+    "            tokens = [*tokens,' ',line[2]]\n",
+    "    return char_to_num(tf.reshape(tf.strings.unicode_split(tokens,input_encoding='UTF-8'),(-1)))[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(path: str):\n",
+    "    path = bytes.decode(path.numpy())\n",
+    "    file_name = path.split('\\\\')[-1].split('.')[0]\n",
+    "    video_path = os.path.join('data','s1',f'{file_name}.mpg')\n",
+    "    alignment_path = os.path.join('data','alignments','s1',f'{file_name}.align')\n",
+    "    frames = load_video(video_path)\n",
+    "    alignments = load_alignments(alignment_path)\n",
+    "\n",
+    "    return frames,alignments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_path = '.\\\\data\\\\s1\\\\bbal6n.mpg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.\\\\data\\\\s1\\\\bbal6n.mpg'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.convert_to_tensor(test_path).numpy().decode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<tf.Tensor: shape=(75, 46, 140, 1), dtype=float32, numpy=\n",
+       " array([[[[ 1.4603739 ],\n",
+       "          [ 1.4603739 ],\n",
+       "          [ 1.4209043 ],\n",
+       "          ...,\n",
+       "          [ 0.15787826],\n",
+       "          [ 0.19734782],\n",
+       "          [ 0.07893913]],\n",
+       " \n",
+       "         [[ 1.4603739 ],\n",
+       "          [ 1.4603739 ],\n",
+       "          [ 1.4209043 ],\n",
+       "          ...,\n",
+       "          [ 0.15787826],\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.03946957]],\n",
+       " \n",
+       "         [[ 1.4209043 ],\n",
+       "          [ 1.4209043 ],\n",
+       "          [ 1.3814348 ],\n",
+       "          ...,\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.07893913]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          ...,\n",
+       "          [ 9.94633   ],\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.867392  ]],\n",
+       " \n",
+       "         [[ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          ...,\n",
+       "          [ 9.90686   ],\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.867392  ]],\n",
+       " \n",
+       "         [[ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          ...,\n",
+       "          [ 9.90686   ],\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.867392  ]]],\n",
+       " \n",
+       " \n",
+       "        [[[ 1.4209043 ],\n",
+       "          [ 1.4209043 ],\n",
+       "          [ 1.3419652 ],\n",
+       "          ...,\n",
+       "          [ 0.19734782],\n",
+       "          [ 0.11840869],\n",
+       "          [ 0.15787826]],\n",
+       " \n",
+       "         [[ 1.4209043 ],\n",
+       "          [ 1.4209043 ],\n",
+       "          [ 1.3419652 ],\n",
+       "          ...,\n",
+       "          [ 0.23681739],\n",
+       "          [ 0.        ],\n",
+       "          [ 0.03946957]],\n",
+       " \n",
+       "         [[ 1.3419652 ],\n",
+       "          [ 1.3419652 ],\n",
+       "          [ 1.3024956 ],\n",
+       "          ...,\n",
+       "          [ 0.11840869],\n",
+       "          [ 0.15787826],\n",
+       "          [ 0.15787826]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          ...,\n",
+       "          [10.0252695 ],\n",
+       "          [ 9.94633   ],\n",
+       "          [ 9.94633   ]],\n",
+       " \n",
+       "         [[ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          ...,\n",
+       "          [ 9.94633   ],\n",
+       "          [ 9.90686   ],\n",
+       "          [ 9.90686   ]],\n",
+       " \n",
+       "         [[ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          ...,\n",
+       "          [ 9.94633   ],\n",
+       "          [ 9.90686   ],\n",
+       "          [ 9.90686   ]]],\n",
+       " \n",
+       " \n",
+       "        [[[ 1.4209043 ],\n",
+       "          [ 1.4209043 ],\n",
+       "          [ 1.3419652 ],\n",
+       "          ...,\n",
+       "          [ 0.15787826],\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.15787826]],\n",
+       " \n",
+       "         [[ 1.4209043 ],\n",
+       "          [ 1.4209043 ],\n",
+       "          [ 1.3419652 ],\n",
+       "          ...,\n",
+       "          [ 0.27628696],\n",
+       "          [ 0.03946957],\n",
+       "          [ 0.15787826]],\n",
+       " \n",
+       "         [[ 1.3419652 ],\n",
+       "          [ 1.3024956 ],\n",
+       "          [ 1.3419652 ],\n",
+       "          ...,\n",
+       "          [ 0.11840869],\n",
+       "          [ 0.11840869],\n",
+       "          [ 0.11840869]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[ 0.9867391 ],\n",
+       "          [ 0.9867391 ],\n",
+       "          [ 0.94726956],\n",
+       "          ...,\n",
+       "          [ 9.9858    ],\n",
+       "          [ 9.9858    ],\n",
+       "          [ 9.9858    ]],\n",
+       " \n",
+       "         [[ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          [ 0.90779996],\n",
+       "          ...,\n",
+       "          [ 9.94633   ],\n",
+       "          [ 9.90686   ],\n",
+       "          [ 9.90686   ]],\n",
+       " \n",
+       "         [[ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          [ 0.90779996],\n",
+       "          ...,\n",
+       "          [ 9.94633   ],\n",
+       "          [ 9.90686   ],\n",
+       "          [ 9.90686   ]]],\n",
+       " \n",
+       " \n",
+       "        ...,\n",
+       " \n",
+       " \n",
+       "        [[[ 1.3814348 ],\n",
+       "          [ 1.3814348 ],\n",
+       "          [ 1.4209043 ],\n",
+       "          ...,\n",
+       "          [ 0.19734782],\n",
+       "          [ 0.15787826],\n",
+       "          [ 0.07893913]],\n",
+       " \n",
+       "         [[ 1.3814348 ],\n",
+       "          [ 1.3814348 ],\n",
+       "          [ 1.4209043 ],\n",
+       "          ...,\n",
+       "          [ 0.11840869],\n",
+       "          [ 0.11840869],\n",
+       "          [ 0.07893913]],\n",
+       " \n",
+       "         [[ 1.3024956 ],\n",
+       "          [ 1.3024956 ],\n",
+       "          [ 1.3024956 ],\n",
+       "          ...,\n",
+       "          [ 0.11840869],\n",
+       "          [ 0.11840869],\n",
+       "          [ 0.15787826]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[ 0.9867391 ],\n",
+       "          [ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          ...,\n",
+       "          [ 9.90686   ],\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.867392  ]],\n",
+       " \n",
+       "         [[ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          ...,\n",
+       "          [ 9.90686   ],\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.867392  ]],\n",
+       " \n",
+       "         [[ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          [ 0.94726956],\n",
+       "          ...,\n",
+       "          [ 9.90686   ],\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.867392  ]]],\n",
+       " \n",
+       " \n",
+       "        [[[ 1.3419652 ],\n",
+       "          [ 1.3419652 ],\n",
+       "          [ 1.3814348 ],\n",
+       "          ...,\n",
+       "          [ 0.15787826],\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.        ]],\n",
+       " \n",
+       "         [[ 1.3419652 ],\n",
+       "          [ 1.3419652 ],\n",
+       "          [ 1.3814348 ],\n",
+       "          ...,\n",
+       "          [ 0.15787826],\n",
+       "          [ 0.11840869],\n",
+       "          [ 0.03946957]],\n",
+       " \n",
+       "         [[ 1.3024956 ],\n",
+       "          [ 1.3024956 ],\n",
+       "          [ 1.3024956 ],\n",
+       "          ...,\n",
+       "          [ 0.11840869],\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.11840869]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[ 0.94726956],\n",
+       "          [ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          ...,\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.827922  ],\n",
+       "          [ 9.827922  ]],\n",
+       " \n",
+       "         [[ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          ...,\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.827922  ],\n",
+       "          [ 9.827922  ]],\n",
+       " \n",
+       "         [[ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          ...,\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.827922  ],\n",
+       "          [ 9.827922  ]]],\n",
+       " \n",
+       " \n",
+       "        [[[ 1.3024956 ],\n",
+       "          [ 1.3024956 ],\n",
+       "          [ 1.3814348 ],\n",
+       "          ...,\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.15787826]],\n",
+       " \n",
+       "         [[ 1.3024956 ],\n",
+       "          [ 1.3024956 ],\n",
+       "          [ 1.3814348 ],\n",
+       "          ...,\n",
+       "          [ 0.        ],\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.23681739]],\n",
+       " \n",
+       "         [[ 1.3419652 ],\n",
+       "          [ 1.3419652 ],\n",
+       "          [ 1.3419652 ],\n",
+       "          ...,\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.07893913],\n",
+       "          [ 0.07893913]],\n",
+       " \n",
+       "         ...,\n",
+       " \n",
+       "         [[ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          ...,\n",
+       "          [ 9.90686   ],\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.867392  ]],\n",
+       " \n",
+       "         [[ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          ...,\n",
+       "          [ 9.94633   ],\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.867392  ]],\n",
+       " \n",
+       "         [[ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          [ 0.90779996],\n",
+       "          ...,\n",
+       "          [ 9.94633   ],\n",
+       "          [ 9.867392  ],\n",
+       "          [ 9.867392  ]]]], dtype=float32)>,\n",
+       " <tf.Tensor: shape=(21,), dtype=int64, numpy=\n",
+       " array([ 2,  9, 14,  0,  2, 12, 21,  5,  0,  1, 20,  0, 12,  0, 19,  9, 24,\n",
+       "         0, 14, 15, 23], dtype=int64)>)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_data(tf.convert_to_tensor(test_path))"
+   ]
   }
  ],
  "metadata": {
