feat:model code done

--- a/index.ipynb
+++ b/index.ipynb
@@ -1302,17 +1302,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "#make a datapipeline\n",
     "\n",
     "data = tf.data.Dataset.list_files('./data/s1/*.mpg')\n",
-    "data = data.shuffle(500)\n",
+    "data = data.shuffle(500,reshuffle_each_iteration=False)\n",
     "data = data.map(mappable_function)\n",
     "data = data.padded_batch(2,padded_shapes=([75,None,None,None],[40]))\n",
-    "data = data.prefetch(tf.data.AUTOTUNE)"
+    "data = data.prefetch(tf.data.AUTOTUNE)\n",
+    "\n",
+    "train = data.take(450)\n",
+    "test = data.skip(450)"
    ]
   },
   {
@@ -1933,10 +1936,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def scheduler(epoch, lr):\n",
+    "    if epoch < 30:\n",
+    "        return lr\n",
+    "    else:\n",
+    "        return lr*tf.math.exp(-0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def CTCLoss(y_true,y_pred):\n",
+    "    batch_len = tf.cast(tf.shape(y_true)[0],dtype=\"int64\")\n",
+    "    input_length = tf.cast(tf.shape(y_pred)[1],dtype=\"int64\")\n",
+    "    label_length = tf.cast(tf.shape(y_true)[1],dtype=\"int64\")\n",
+    "\n",
+    "    input_length = input_length * tf.ones(shape=(batch_len,1),dtype=\"int64\")\n",
+    "    label_length = label_length * tf.ones(shape=(batch_len,1),dtype=\"int64\")\n",
+    "\n",
+    "    loss = tf.keras.backend.ctc_batch_cost(y_true,y_pred,input_length,label_length)\n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ProduceExample(tf.keras.callbacks.Callback):\n",
+    "    def __init__(self,dataset):\n",
+    "        self.dataset = dataset.as_numpy_iterator()\n",
+    "\n",
+    "    def on_epoch_end(self, epoch, logs=None):\n",
+    "        data = self.dataset.next()\n",
+    "        yhat = self.model.predict(data[0])\n",
+    "        decoded = tf.keras.backend.ctc_decode(yhat,[75,75],greedy=False)[0][0].numpy()\n",
+    "        for x in range(len(yhat)):\n",
+    "            print('Original:', tf.strings.reduce_join(num_to_char(data[1][x])).numpy().decode('utf-8'))\n",
+    "            print('Prediction:', tf.strings.reduce_join(num_to_char(decoded[x])).numpy().decode('utf-8'))\n",
+    "            print('~'*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer=Adam(learning_rate=0.0001),loss=CTCLoss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint_callback = ModelCheckpoint(os.path.join('models','checkpoint'),monitor='loss',save_weights_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schedule_callback = LearningRateScheduler(scheduler)\n",
+    "example_callback = ProduceExample(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/100\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(train, validation_data=test, epochs=100, callbacks=[checkpoint_callback, schedule_callback, example_callback])"
+   ]
   }
  ],
  "metadata": {
