feat:proper documentation

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,6 +50,7 @@
    "outputs": [],
    "source": [
     "def load_video(path:str) -> List[float]:\n",
+    "    # input the video path and return a list of frames\n",
     "    cap = cv2.VideoCapture(path)\n",
     "    frames = []\n",
     "    for _ in range(int(cap.get(cv2.CAP_PROP_FRAME_COUNT))):\n",
@@ -58,6 +59,7 @@
     "        frames.append(frame[190:236,80:220,:])\n",
     "    cap.release()\n",
     "\n",
+    "    # we normalize the frames\n",
     "    mean = tf.math.reduce_mean(frames)\n",
     "    std = tf.math.reduce_std(tf.cast(frames, tf.float32))\n",
     "    return tf.cast((frames - mean),tf.float32)/std\n"
@@ -109,7 +111,9 @@
     "    tokens = []\n",
     "    for line in lines:\n",
     "        line = line.split()\n",
+    "        # dont consider silences\n",
     "        if line[2] != 'sil':\n",
+    "            # appending the words as token to existing tokens(words)\n",
     "            tokens = [*tokens,' ',line[2]]\n",
     "    return char_to_num(tf.reshape(tf.strings.unicode_split(tokens,input_encoding='UTF-8'),(-1)))[1:]"
    ]
@@ -121,6 +125,7 @@
    "outputs": [],
    "source": [
     "def load_data(path: str):\n",
+    "    # loading the data using path sent as a tensor\n",
     "    path = bytes.decode(path.numpy())\n",
     "    file_name = path.split('\\\\')[-1].split('.')[0]\n",
     "    video_path = os.path.join('data','s1',f'{file_name}.mpg')\n",
@@ -611,9 +616,12 @@
     "#make a datapipeline\n",
     "\n",
     "data = tf.data.Dataset.list_files('./data/s1/*.mpg')\n",
+    "# get 500 files\n",
     "data = data.shuffle(500,reshuffle_each_iteration=False)\n",
     "data = data.map(mappable_function)\n",
+    "# using batches of 2 and padding the data to avoid uneven shape of alignment and frames\n",
     "data = data.padded_batch(2,padded_shapes=([75,None,None,None],[40]))\n",
+    "# prefetching the data to avoid bottleneck\n",
     "data = data.prefetch(tf.data.AUTOTUNE)\n",
     "\n",
     "train = data.take(450)\n",
@@ -694,7 +702,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = data.as_numpy_iterator()"
+    "test = data.as_numpy_iterator()\n",
+    "\n",
+    "# test has and array of [frames,alignments] inside those we have 2 video frames and 2 alignments"
    ]
   },
   {
@@ -1026,34 +1036,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Cannot handle this data type: (1, 1, 1), <f4",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\PIL\\Image.py:3089\u001b[0m, in \u001b[0;36mfromarray\u001b[1;34m(obj, mode)\u001b[0m\n\u001b[0;32m   3088\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3089\u001b[0m     mode, rawmode \u001b[39m=\u001b[39m _fromarray_typemap[typekey]\n\u001b[0;32m   3090\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n",
-      "\u001b[1;31mKeyError\u001b[0m: ((1, 1, 1), '<f4')",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[30], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m imageio\u001b[39m.\u001b[39;49mv3\u001b[39m.\u001b[39;49mimwrite(\u001b[39m'\u001b[39;49m\u001b[39m./animation.gif\u001b[39;49m\u001b[39m'\u001b[39;49m,val[\u001b[39m0\u001b[39;49m][\u001b[39m0\u001b[39;49m])\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\imageio\\v3.py:147\u001b[0m, in \u001b[0;36mimwrite\u001b[1;34m(uri, image, plugin, extension, format_hint, **kwargs)\u001b[0m\n\u001b[0;32m    105\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Write an ndimage to the given URI.\u001b[39;00m\n\u001b[0;32m    106\u001b[0m \n\u001b[0;32m    107\u001b[0m \u001b[39mThe exact behavior depends on the file type and plugin used. To learn about\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    136\u001b[0m \n\u001b[0;32m    137\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    139\u001b[0m \u001b[39mwith\u001b[39;00m imopen(\n\u001b[0;32m    140\u001b[0m     uri,\n\u001b[0;32m    141\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    145\u001b[0m     extension\u001b[39m=\u001b[39mextension,\n\u001b[0;32m    146\u001b[0m ) \u001b[39mas\u001b[39;00m img_file:\n\u001b[1;32m--> 147\u001b[0m     encoded \u001b[39m=\u001b[39m img_file\u001b[39m.\u001b[39mwrite(image, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    149\u001b[0m \u001b[39mreturn\u001b[39;00m encoded\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\imageio\\plugins\\pillow.py:416\u001b[0m, in \u001b[0;36mPillowPlugin.write\u001b[1;34m(self, ndimage, mode, format, is_batch, **kwargs)\u001b[0m\n\u001b[0;32m    413\u001b[0m     ndimage \u001b[39m=\u001b[39m ndimage[\u001b[39mNone\u001b[39;00m, \u001b[39m.\u001b[39m\u001b[39m.\u001b[39m\u001b[39m.\u001b[39m]\n\u001b[0;32m    415\u001b[0m \u001b[39mfor\u001b[39;00m frame \u001b[39min\u001b[39;00m ndimage:\n\u001b[1;32m--> 416\u001b[0m     pil_frame \u001b[39m=\u001b[39m Image\u001b[39m.\u001b[39;49mfromarray(frame, mode\u001b[39m=\u001b[39;49mmode)\n\u001b[0;32m    417\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m\"\u001b[39m\u001b[39mbits\u001b[39m\u001b[39m\"\u001b[39m \u001b[39min\u001b[39;00m kwargs:\n\u001b[0;32m    418\u001b[0m         pil_frame \u001b[39m=\u001b[39m pil_frame\u001b[39m.\u001b[39mquantize(colors\u001b[39m=\u001b[39m\u001b[39m2\u001b[39m \u001b[39m*\u001b[39m\u001b[39m*\u001b[39m kwargs[\u001b[39m\"\u001b[39m\u001b[39mbits\u001b[39m\u001b[39m\"\u001b[39m])\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\PIL\\Image.py:3092\u001b[0m, in \u001b[0;36mfromarray\u001b[1;34m(obj, mode)\u001b[0m\n\u001b[0;32m   3090\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m   3091\u001b[0m         msg \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mCannot handle this data type: \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m, \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m typekey\n\u001b[1;32m-> 3092\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(msg) \u001b[39mfrom\u001b[39;00m \u001b[39me\u001b[39;00m\n\u001b[0;32m   3093\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   3094\u001b[0m     rawmode \u001b[39m=\u001b[39m mode\n",
-      "\u001b[1;31mTypeError\u001b[0m: Cannot handle this data type: (1, 1, 1), <f4"
-     ]
-    }
-   ],
-   "source": [
-    "imageio.v3.imwrite('./animation.gif',val[0][0])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
@@ -1121,10 +1103,14 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
+    "# conv3D used for video processing input shape is the shape of each frame and 128 output filters and 3 is 3d kernel size\n",
     "model.add(Conv3D(128,3,input_shape=(75,46,140,1),padding='same'))\n",
+    "# to get some non linearities\n",
     "model.add(Activation('relu'))\n",
+    "# takes max values of each frame and condences into 2x2 kernel\n",
     "model.add(MaxPool3D((1,2,2)))\n",
     "\n",
+    "# 2nd layer with 256 output filters\n",
     "model.add(Conv3D(256,3,padding='same'))\n",
     "model.add(Activation('relu'))\n",
     "model.add(MaxPool3D((1,2,2)))\n",
@@ -1133,14 +1119,23 @@
     "model.add(Activation('relu'))\n",
     "model.add(MaxPool3D((1,2,2)))\n",
     "\n",
+    "# flatten the output to feed into dense layer\n",
     "model.add(TimeDistributed(Flatten()))\n",
     "\n",
+    "# 2 layer LSTM\n",
+    "# return_sequences=True means it will return the output of each time step\n",
+    "# dropout to prevent overfitting\n",
+    "# kernel_initializer='Orthogonal' to prevent vanishing gradient problem\n",
+    "# 128 is the number of hidden units\n",
     "model.add(Bidirectional(LSTM(128, kernel_initializer='Orthogonal',return_sequences=True)))\n",
     "model.add(Dropout(.5))\n",
     "\n",
     "model.add(Bidirectional(LSTM(128, kernel_initializer='Orthogonal',return_sequences=True)))\n",
     "model.add(Dropout(.5))\n",
     "\n",
+    "# dense layer with softmax activation\n",
+    "# output in the form of one hot encoding of the characters in the vocabulary + 1 for blank character\n",
+    "# using softmax activation to get the probability of each character then take the max probability using argmax\n",
     "model.add(Dense(char_to_num.vocabulary_size()+1, kernel_initializer='he_normal',activation='softmax'))"
    ]
   },
@@ -1250,6 +1245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# function to define learning rate scheduler\n",
     "def scheduler(epoch, lr):\n",
     "    if epoch < 30:\n",
     "        return lr\n",
@@ -1264,6 +1260,7 @@
    "outputs": [],
    "source": [
     "def CTCLoss(y_true,y_pred):\n",
+    "    # loss function for CTC. used for training to reduce the loss\n",
     "    batch_len = tf.cast(tf.shape(y_true)[0],dtype=\"int64\")\n",
     "    input_length = tf.cast(tf.shape(y_pred)[1],dtype=\"int64\")\n",
     "    label_length = tf.cast(tf.shape(y_true)[1],dtype=\"int64\")\n",
@@ -1284,7 +1281,7 @@
     "class ProduceExample(tf.keras.callbacks.Callback):\n",
     "    def __init__(self,dataset):\n",
     "        self.dataset = dataset.as_numpy_iterator()\n",
-    "\n",
+    "    # on epoch end, print an example of text prediction\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
     "        data = self.dataset.next()\n",
     "        yhat = self.model.predict(data[0])\n",
@@ -1302,6 +1299,7 @@
    "outputs": [],
    "source": [
     "optimizer = tf.keras.optimizers.legacy.Adam(learning_rate=0.0001)\n",
+    "# typical keras model compilation\n",
     "model.compile(optimizer,loss=CTCLoss)"
    ]
   },
@@ -1311,6 +1309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# to store the model checkpoints\n",
     "checkpoint_callback = ModelCheckpoint(os.path.join('models','checkpoint'),monitor='loss',save_weights_only=True)"
    ]
   },
@@ -1320,7 +1319,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# used to drop the learning rate after a certain number of epochs\n",
     "schedule_callback = LearningRateScheduler(scheduler)\n",
+    "# used to print the example predictions\n",
     "example_callback = ProduceExample(test)"
    ]
   },
@@ -1330,6 +1331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# trainning the model\n",
     "model.fit(train, validation_data=test, epochs=100, callbacks=[checkpoint_callback, schedule_callback, example_callback])"
    ]
   },
@@ -1350,6 +1352,7 @@
     }
    ],
    "source": [
+    "# loading a trained model\n",
     "model.load_weights('models/checkpoint')"
    ]
   },
@@ -1486,67 +1489,6 @@
     "print('~'*100,'PREDICTIONS')\n",
     "[tf.strings.reduce_join([num_to_char(word) for word in sentence]) for sentence in decoded]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "data = tf.data.Dataset.list_files('./data/s1/test.mp4')\n",
-    "data = data.shuffle(1,reshuffle_each_iteration=False)\n",
-    "data = data.map(mappable_function)\n",
-    "data = data.padded_batch(1,padded_shapes=([75,None,None,None],[40]))\n",
-    "data = data.prefetch(tf.data.AUTOTUNE)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<_PrefetchDataset element_spec=(TensorSpec(shape=(None, 75, None, None, None), dtype=tf.float32, name=None), TensorSpec(shape=(None, 40), dtype=tf.int64, name=None))>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnknownError",
-     "evalue": "Graph execution error:\n\nerror: OpenCV(4.7.0) :-1: error: (-5:Bad argument) in function 'VideoCapture'\n> Overload resolution failed:\n>  - Can't convert object to 'str' for 'filename'\n>  - VideoCapture() missing required argument 'apiPreference' (pos 2)\n>  - Argument 'index' is required to be an integer\n>  - VideoCapture() missing required argument 'apiPreference' (pos 2)\n\nTraceback (most recent call last):\n\n  File \"C:\\Users\\Aaron\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tensorflow\\python\\ops\\script_ops.py\", line 265, in __call__\n    return func(device, token, args)\n\n  File \"C:\\Users\\Aaron\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tensorflow\\python\\ops\\script_ops.py\", line 143, in __call__\n    outputs = self._call(device, args)\n\n  File \"C:\\Users\\Aaron\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tensorflow\\python\\ops\\script_ops.py\", line 150, in _call\n    ret = self._func(*args)\n\n  File \"C:\\Users\\Aaron\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tensorflow\\python\\autograph\\impl\\api.py\", line 642, in wrapper\n    return func(*args, **kwargs)\n\n  File \"C:\\Users\\Aaron\\AppData\\Local\\Temp\\ipykernel_15680\\2104742655.py\", line 2, in load_video\n    cap = cv2.VideoCapture(path)\n\ncv2.error: OpenCV(4.7.0) :-1: error: (-5:Bad argument) in function 'VideoCapture'\n> Overload resolution failed:\n>  - Can't convert object to 'str' for 'filename'\n>  - VideoCapture() missing required argument 'apiPreference' (pos 2)\n>  - Argument 'index' is required to be an integer\n>  - VideoCapture() missing required argument 'apiPreference' (pos 2)\n\n\n\n\t [[{{node EagerPyFunc}}]]\n\t [[IteratorGetNext]] [Op:__inference_predict_function_770217]",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnknownError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[74], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m yhat \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39;49mpredict(data)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\keras\\utils\\traceback_utils.py:70\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     67\u001b[0m     filtered_tb \u001b[39m=\u001b[39m _process_traceback_frames(e\u001b[39m.\u001b[39m__traceback__)\n\u001b[0;32m     68\u001b[0m     \u001b[39m# To get the full stack trace, call:\u001b[39;00m\n\u001b[0;32m     69\u001b[0m     \u001b[39m# `tf.debugging.disable_traceback_filtering()`\u001b[39;00m\n\u001b[1;32m---> 70\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(filtered_tb) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m     71\u001b[0m \u001b[39mfinally\u001b[39;00m:\n\u001b[0;32m     72\u001b[0m     \u001b[39mdel\u001b[39;00m filtered_tb\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tensorflow\\python\\eager\\execute.py:52\u001b[0m, in \u001b[0;36mquick_execute\u001b[1;34m(op_name, num_outputs, inputs, attrs, ctx, name)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m     51\u001b[0m   ctx\u001b[39m.\u001b[39mensure_initialized()\n\u001b[1;32m---> 52\u001b[0m   tensors \u001b[39m=\u001b[39m pywrap_tfe\u001b[39m.\u001b[39mTFE_Py_Execute(ctx\u001b[39m.\u001b[39m_handle, device_name, op_name,\n\u001b[0;32m     53\u001b[0m                                       inputs, attrs, num_outputs)\n\u001b[0;32m     54\u001b[0m \u001b[39mexcept\u001b[39;00m core\u001b[39m.\u001b[39m_NotOkStatusException \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m     55\u001b[0m   \u001b[39mif\u001b[39;00m name \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
-      "\u001b[1;31mUnknownError\u001b[0m: Graph execution error:\n\nerror: OpenCV(4.7.0) :-1: error: (-5:Bad argument) in function 'VideoCapture'\n> Overload resolution failed:\n>  - Can't convert object to 'str' for 'filename'\n>  - VideoCapture() missing required argument 'apiPreference' (pos 2)\n>  - Argument 'index' is required to be an integer\n>  - VideoCapture() missing required argument 'apiPreference' (pos 2)\n\nTraceback (most recent call last):\n\n  File \"C:\\Users\\Aaron\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tensorflow\\python\\ops\\script_ops.py\", line 265, in __call__\n    return func(device, token, args)\n\n  File \"C:\\Users\\Aaron\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tensorflow\\python\\ops\\script_ops.py\", line 143, in __call__\n    outputs = self._call(device, args)\n\n  File \"C:\\Users\\Aaron\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tensorflow\\python\\ops\\script_ops.py\", line 150, in _call\n    ret = self._func(*args)\n\n  File \"C:\\Users\\Aaron\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\tensorflow\\python\\autograph\\impl\\api.py\", line 642, in wrapper\n    return func(*args, **kwargs)\n\n  File \"C:\\Users\\Aaron\\AppData\\Local\\Temp\\ipykernel_15680\\2104742655.py\", line 2, in load_video\n    cap = cv2.VideoCapture(path)\n\ncv2.error: OpenCV(4.7.0) :-1: error: (-5:Bad argument) in function 'VideoCapture'\n> Overload resolution failed:\n>  - Can't convert object to 'str' for 'filename'\n>  - VideoCapture() missing required argument 'apiPreference' (pos 2)\n>  - Argument 'index' is required to be an integer\n>  - VideoCapture() missing required argument 'apiPreference' (pos 2)\n\n\n\n\t [[{{node EagerPyFunc}}]]\n\t [[IteratorGetNext]] [Op:__inference_predict_function_770217]"
-     ]
-    }
-   ],
-   "source": [
-    "yhat = model.predict(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
